# cargo-vika

./: Cargo.toml  README.md
src/: arch.rs  lib.rs  main.rs  metadata.rs  pretty_output.rs
src/subcommand/: build.rs  mod.rs  new.rs
src/subcommand/run/: mod.rs  qemu.rs
