[package]
name = "cargo-vika"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0"
description = "cargo tool to ease creating UEFI projects"
documentation = "https://docs.rs/cargo_vika"
repository = "https://github.com/Roman-Tarasenko-27/cargo-vika"
keywords = ["uefi", "vika", "create", "project"]
readme = "README.md"
authors = ["Roman <romann.tarasenko@gmail.com>"]
exclude = [".gitignore"]

[dependencies.cargo_metadata]
version = "0.14.*"

[dependencies.clap]
version = "2.33.*"

[dependencies.cfg-if]
version = "1.0.*"

[dependencies.termcolor]
version = "1.1.*"
